This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
1/27/23: Fixed bad zoom being set when reading in an image acquired on a
camera not defined in current properties (In 4.0).

1/19/23: Fixed crash when collapsing Navigator groups right after adding a
grid of points (In 4.0).

1/19/23: Fixed ability to set axis rotation with mouse click in a Search image
when Trial/Focus area is being defined (In 4.0).

1/19/23: Fixed errors that occur when a camera shot is started immediately
after clicking the mag or spot spinner in the scpoe control panel (In 4.0).

1/18/23: Fixed missing the last autoloader slot when getting the inventory on
a JEOL (In 4.0).

1/18/23: Fixed binning spinner in autocenter setup dialog going past end of
range (In 4.0).

1/16/23: Fixed OpenOldFile command with HDF file (In 4.0).

1/13/23: SEM_4-0-17
1/13/23: Started writing a file along with the Navigator file, named
..._pre-combine.holes, for narrowing down the source of a bug where Realign to
Item fails on points after combining holes (In 4.0).

1/13/23: Made some changes to reduce the possibility of the a script being run
when Enter is pressed in its editing window (In 4.0).

12/28/22: Fixed initialization of overlap and byte scaling when reading
montage parameters for new file at item from Navigator file (In 4.0).

12/22/22: Fixed SEMCCD getting frames for just aligning with
K2SynchronousSaving set (In 4.0).

12/14/22: SEM_4-0-16
12/14/22: Preserved open/closed states and floated positions of tool panels
hidden in basic mode, even across sessions (In 4.0).

12/14/22: Fixed setting of DE protection cover to always open after first shot
of beam intensity calibration, which made it stay closed at one site (In 4.0).
