@@ -4109,7 +4109,6 @@ BOOL CEMscope::AssessMagISchange(int fromInd, int toInd, BOOL STEMmode, double &
       delISY += tranISY - realISY;
     }
   }
-
   result = (delISX || delISY || MagChgResetsIS(toInd)) && mCalNeutralStartMag < 0 &&
     (bothLMnonLM || mApplyISoffset || mLowDoseMode);
   if (result) {
@@ -7388,7 +7387,7 @@ BOOL CEMscope::SetEFTEM(BOOL inState)
   int newMag = 0;
   int oldMag, curMag, toCam, fromCam, enumVal, regCam, lvalue;
   float toFactor, fromPixel, toPixel;
-  double ratio, factor, newIntensity;
+  double ratio, factor, newIntensity, delISX, delISY;
   BOOL savedIntensityZoom = false;
   BOOL regIsSTEM = false, mismatch = false;
 
@@ -7483,6 +7482,10 @@ BOOL CEMscope::SetEFTEM(BOOL inState)
           if (mPlugFuncs->NormalizeLens)
             mPlugFuncs->NormalizeLens(pnmProjector);
           AUTONORMALIZE_SET(*vTrue);
+          if (oldMag != newMag && mApplyISoffset) {
+            AssessMagISchange(oldMag, newMag, false, delISX, delISY);
+            mPlugFuncs->SetImageShift(delISX, delISY);
+          }
         }
       }
 
